--- a/ASSIGNMENT 3/Portfolio.html
+++ b/ASSIGNMENT 3/Portfolio.html
@@ -75,7 +75,7 @@
 
   <header id="home">
     <h1 id="greeting">Welcome!</h1>
-    <p>I’m <strong>Kesavapandiyan (Roll No: 23BCS043)</strong>, a passionate Web Developer.</p>
+    <p>I’m <strong>Harish Kumaran (Roll No: 23BCS040)</strong>, a passionate Web Developer.</p>
     <div id="clock"></div>
   </header>
 
@@ -131,7 +131,7 @@
   </div>
 
   <footer>
-    <p>© 2025 Kesavan (Roll No: 23BCS043) | Designed with using HTML5, CSS3, JS, jQuery & Bootstrap</p>
+    <p>© 2025 Harish (Roll No: 23BCS040) | Designed with using HTML5, CSS3, JS, jQuery & Bootstrap</p>
   </footer>
 
   <script>
@@ -161,8 +161,8 @@
 
       const projects = [
         { title: "Automatic Exam - Hall Seating Arrangement System", desc: "A responsive Seating Arrangement for Students,which will reduce the manual work using java." },
-        { title: "Diabetes Prediction System", desc: "Predicting the diabetes level of the patient.Our project reduces the consultation time of the pateient using python." },
-        { title: "AI-Driven Health Diagnosis System", desc: "A real-time prediction(100%) of disease leavel without doctor using python and html,bootstrap,javascript" },
+        { title: "RFID based Agricultural management system", desc: "An RFID-based agricultural system using Arduino and Python automates rice bag tracking and real-time data logging, enhancing efficiency in farming product management." },
+        { title: "Chatbot using RAG concept", desc: "A RAG-based chatbot with an HTML front end and Python backend combines document retrieval from a knowledge base with generative AI to deliver accurate, context-aware answers through a web interface." },
       ];
 
       projects.forEach(p => {
